# tfanalyse

./: .gitignore  LICENSE.txt  README.md  do  pyproject.toml
.github/workflows/: release.yaml  test.yml
test/: test_change.py  test_load.py  test_summarise.py
test/resources/: invalid_plan.tfplan
tfanalyse/: change.py  cli.py  util.py
